--- a/Term_Project/Term_Project/Front.Master
+++ b/Term_Project/Term_Project/Front.Master
@@ -42,7 +42,7 @@
 
          <!-- Footer Section -->
         <div class="footer">
-            &copy; NCCS 2019 - All Rights Reserved.
+            &copy; NCCS 2019 - All Rights Reserved. Powered by - Chandra K. Rai
         </div>
 
     </form>
